<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">luca</string>
    <string name="unknown">Unknown</string>
    <string name="url_terms_and_conditions">https://www.luca-app.de/app-terms-and-conditions-2/</string>
    <string name="url_privacy_policy">https://www.luca-app.de/app-privacy-policy/</string>
    <string name="url_imprint">https://luca-app.de/imprint</string>
    <string name="url_gitlab" translatable="false">https://gitlab.com/lucaapp/android</string>
    <string name="url_faq">https://www.luca-app.de/faq/</string>
    <string name="mail_support" translatable="false">hello@luca-app.de</string>
    <string name="mail_abuse" translatable="false">abuse@luca-app.de</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="additional_details_content_description">Additional Details</string>
    <string name="collapse_indicator_content_description">Expand or collapse this list item</string>
    <string name="action_ok">@android:string/ok</string>
    <string name="action_cancel">@android:string/cancel</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_stop">Stop</string>
    <string name="action_retry">Retry</string>
    <string name="action_resolve">Resolve</string>
    <string name="action_continue">Continue</string>
    <string name="action_finish">Finish</string>
    <string name="action_grant">Grant</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_update">Update</string>
    <string name="action_enable">Enable</string>
    <string name="action_add">Add</string>
    <string name="action_copy">Copy</string>
    <string name="action_change">Change</string>
    <string name="action_back">Back</string>
    <string name="action_agree">Agree</string>
    <string name="action_check_in">Check in</string>
    <string name="action_open">Open</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_selected">Delete selected</string>
    <string name="clipboard_success">Copied to clipboard</string>
    <string name="clipboard_failed">Copy to clipboard failed</string>
    <string name="consent_title">Consent</string>
    <string name="consent_accept_action">@string/action_agree</string>
    <string name="consent_terms_of_service_title">New Terms of Use</string>
    <string name="consent_terms_of_service_description"><![CDATA[We have updated our terms of use. In order to use the new features of luca, you must agree to the <a href="https://www.luca-app.de/changes-terms-of-use-app/">changes in the terms of use</a>.<br/><br/>Click accept to accept the <a href="https://www.luca-app.de/app-terms-and-conditions-2/">updated terms of use</a>.]]></string>
    <string name="consent_enable_camera_title">Enable camera access</string>
    <string name="consent_enable_camera_description">luca needs access to your camera so that you can scan QR codes of documents, at locations or private meetings. Only the QR code data will be processed and no other data will be stored.</string>
    <string name="consent_import_document_description">I hereby declare my consent in accordance with Art. 9 (2) a) in conjunction with Art. 6 (1) 1 a) GDPR to the processing of my data during the import of my COVID test, recovery or vaccination certificate in the luca app. The data included in the document can be matched to my first and last name in the luca app. I also allow the storage of a pseudonymized identifier on the luca server. This is solely to prevent misuse, so that a document cannot be used by different people. The document’s individual identifier is automatically deleted from the luca system after 72 hours of storage.</string>
    <string name="consent_include_entry_policy_description">I hereby give my consent in accordance with Art. 9 (2) a) in combination with Art. 6 (1) 1 a) GDPR to process the status of my stored COVID test, recovery or vaccination document (tested negative, recovered or vaccinated). At check-in, my luca app checks whether my imported document matches the location\'s entry requirement. My luca app displays whether I fulfill the entry requirement of the location I am checked into. My document or the data and information it contains will not be stored or transmitted outside of my luca app.</string>
    <string name="consent_share_entry_policy_description">I hereby give my consent in accordance with Art. 9 (2) a) in combination with Art. 6 (1) 1 a) GDPR to process the status of my stored COVID test, recovery or vaccination document (tested negative, recovered or vaccinated). At check-in, my luca app checks whether my imported document matches the location\'s entry requirement. My luca app displays whether I fulfill the entry requirement of the location I am checked into. My document or the data and information it contains will not be stored or transmitted outside of my luca app.</string>
    <string name="consent_postal_code_matching_title">@string/postal_code_settings_switch_title</string>
    <string name="consent_postal_code_matching_description">I hereby declare my consent according to Art. 6 (1) 1 a) DSGVO for the processing of my zip code stored locally in the app for the purpose of enabling regional functionalities. My zip code was initially collected for the purpose of contact tracking and stored in encrypted form in the luca System. I agree that the zip code is also processed locally on my end device by the luca app. This allows luca to show me and unlock new and regionally limited functionalities. The processing is only performed locally within my own app. No further storage takes place. I can execute my revocation at any time within my preferences (under \"Account\").</string>
    <string name="error_generic_title">Something went wrong</string>
    <string name="error_generic_description">An unexpected error occurred. Please get in touch if this issue persists.</string>
    <string name="error_specific_title">Error: <xliff:g example="HttpException" id="exceptionType">%1$s</xliff:g></string>
    <string name="error_specific_description">An unexpected error occurred:\n\n<xliff:g example="Request not authorized, status code 401" id="exceptionMessage">%1$s</xliff:g>\n\nPlease get in touch if this issue persists.</string>
    <string name="error_request_failed_title">Request failed</string>
    <string name="error_check_in_failed">Check-in failed</string>
    <string name="error_location_not_found">It is not possible to check in here any more.</string>
    <string name="error_certificate_pinning_title">Unexpected server certificates</string>
    <string name="error_certificate_pinning_description">When attempting to establish a secure connection to the luca servers, we found untrusted certificates.\n\nPlease try switching your network and make sure that you\'re using the latest app version.</string>
    <string name="error_no_internet_connection_title">No internet connection</string>
    <string name="error_no_internet_connection_description">The process could not be executed. Please connect to the internet and try again.</string>
    <string name="error_no_daily_key_available_title">Check-in not possible</string>
    <string name="error_no_daily_key_available_description">You are currently unable to check in. Check your connection and try again. Please contact us if your check-in still does not work.</string>
    <string name="error_rollout_title">Not yet available</string>
    <string name="error_rollout_description">The feature you just tried to use is not available on your device yet. Please try again later.</string>
    <string name="error_http_server_error_title">Service unavailable</string>
    <string name="error_http_server_error_description">The luca service is currently unavailable, please try again later.</string>
    <string name="error_feature_unavailable">The feature you just tried to use is not available on your device:\n\n<xliff:g example="Request not authorized, status code 401" id="exceptionMessage">%1$s</xliff:g></string>
    <string name="status_check_out_in_progress">Checking out…</string>
    <string name="status_check_out_succeeded">Checked out</string>
    <string name="status_check_out_failed">Checkout failed</string>
    <string name="notification_channel_status_title">Status</string>
    <string name="notification_channel_status_description">Indicates that luca is running.</string>
    <string name="notification_channel_access_title">Data accesses</string>
    <string name="notification_channel_access_description">Informs you if a health department has accessed check-ins related to you.</string>
    <string name="notification_channel_connect_title">luca Connect</string>
    <string name="notification_channel_connect_description">Informs you if your responsible health department has messages for you.</string>
    <string name="navigation_contact_data">Contact data</string>
    <string name="navigation_venue_details">@string/navigation_venue_list</string>
    <string name="navigation_history">History</string>
    <string name="navigation_meeting">@string/meeting_heading</string>
    <string name="navigation_meeting_detail">@string/meeting_details_title</string>
    <string name="navigation_accessed_data">Data reports</string>
    <string name="navigation_accessed_data_details">Accessed data detail</string>
    <string name="navigation_my_luca">@string/my_luca_heading</string>
    <string name="navigation_account">Account</string>
    <string name="add_children_title">Add children</string>
    <string name="luca_connect_share_data_title">Data</string>
    <string name="luca_connect_share_data_description">In addition to your document, your contact information is also encrypted and shared. You can edit your information in your \"Account\".</string>
    <string name="luca_connect_share_data_name">First and last name</string>
    <string name="luca_connect_share_data_birthday">@string/data_request_document_birthdate</string>
    <string name="luca_connect_share_data_address">@string/data_request_contact_data_address</string>
    <string name="luca_connect_share_data_phone">@string/data_request_contact_data_phone_number</string>
    <string name="luca_connect_share_data_mail">@string/data_request_contact_data_mail</string>
    <string name="luca_connect_share_data_action">Share</string>
    <string name="account_tab_section_settings">Settings</string>
    <string name="account_tab_item_edit_contact_data">Contact data</string>
    <string name="account_tab_item_postal_code">Zip code matching</string>
    <string name="account_tab_item_luca_connect">luca Connect</string>
    <string name="account_tab_section_help">Help</string>
    <string name="account_tab_item_guides">News</string>
    <string name="account_tab_item_faq">FAQ</string>
    <string name="account_tab_item_support">Support</string>
    <string name="account_tab_section_info">Info</string>
    <string name="account_tab_item_data_request">Data report</string>
    <string name="account_tab_item_data_protection">Data protection</string>
    <string name="account_tab_item_terms">Terms and conditions</string>
    <string name="account_tab_item_imprint">Imprint</string>
    <string name="account_tab_item_licenses">Licenses</string>
    <string name="account_tab_item_daily_key">Daily key</string>
    <string name="account_tab_item_app_version">App version</string>
    <string name="account_tab_item_app_data">App data</string>
    <string name="account_tab_item_source_code">Source code</string>
    <string name="account_tab_item_delete_account">Delete account</string>
    <string name="account_tab_title_content_description">Account</string>
    <string name="dummy_heading" translatable="false">Lorem Ipsum</string>
</resources>