<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/actionBarTitleTextView"
        style="@style/ActionBarTitleTextView"
        android:contentDescription="@string/account_tab_title_content_description"
        android:text="@string/navigation_account"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/actionBarSeparatorView"
        style="@style/ActionBarSeparatorView"
        tools:ignore="MissingConstraints" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBarSeparatorView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_default">

            <TextView
                style="@style/AccountTabSectionHeadingTextView"
                android:layout_marginTop="0dp"
                android:text="@string/account_tab_section_settings"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.card.MaterialCardView
                style="@style/AccountTabCardView"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/editContactDataItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconSrc="@drawable/ic_person_outline"
                        app:text="@string/account_tab_item_edit_contact_data" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/postalCodeItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showSeparator="false"
                        app:startIconSrc="@drawable/ic_pin"
                        app:text="@string/account_tab_item_postal_code" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/lucaConnectItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:showSeparator="false"
                        app:startIconSrc="@drawable/ic_bell"
                        app:text="@string/account_tab_item_luca_connect" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/AccountTabSectionHeadingTextView"
                android:text="@string/account_tab_section_help"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.card.MaterialCardView
                style="@style/AccountTabCardView"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/guidesItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_guides" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/faqItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconSrc="@drawable/ic_external_hyperlink"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_faq" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/supportItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showSeparator="false"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_support" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/AccountTabSectionHeadingTextView"
                android:text="@string/account_tab_section_info"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.card.MaterialCardView
                style="@style/AccountTabCardView"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/dataProtectionItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconSrc="@drawable/ic_external_hyperlink"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_data_protection" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/dataRequestItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_data_request" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/termsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconSrc="@drawable/ic_external_hyperlink"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_terms" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/dailyKeyItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_daily_key" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/imprintItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:endIconSrc="@drawable/ic_external_hyperlink"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_imprint" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/licensesItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_licenses" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/versionItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_app_version" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/appDataItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_app_data" />

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/sourceCodeItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showSeparator="false"
                        app:showStartIcon="false"
                        app:text="@string/account_tab_item_source_code" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/AccountTabCardView"
                android:layout_marginTop="@dimen/spacing_large"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.culture4life.luca.ui.compound.AccountItemView
                        android:id="@+id/deleteAccountItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showSeparator="false"
                        app:startIconSrc="@drawable/ic_bin"
                        app:text="@string/account_tab_item_delete_account" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>