<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainNavigation"
    app:startDestination="@+id/checkInFragment">

    <fragment
        android:id="@+id/myLucaFragment"
        android:name="de.culture4life.luca.ui.myluca.MyLucaFragment"
        android:label="@string/navigation_my_luca"
        tools:layout="@layout/fragment_my_luca">
        <action
            android:id="@+id/action_myLucaFragment_to_childrenFragment"
            app:destination="@id/childrenFragment" />
        <action
            android:id="@+id/action_myLucaFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_myLucaFragment_to_accessedDataDetailFragment"
            app:destination="@id/accessedDataDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/checkInFragment"
        android:name="de.culture4life.luca.ui.checkin.CheckInFragment"
        android:label="@string/navigation_contact_data"
        tools:layout="@layout/fragment_check_in">
        <action
            android:id="@+id/action_checkInFragment_to_venueDetailFragment"
            app:destination="@id/venueDetailFragment" />
        <action
            android:id="@+id/action_checkInFragment_to_history"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_checkInFragment_to_venueDetailFragmentCheckedIn"
            app:destination="@id/venueDetailFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mainNavigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_checkInFragment_to_meetingFragment"
            app:destination="@id/meetingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mainNavigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/venueDetailFragment"
        android:name="de.culture4life.luca.ui.venue.VenueDetailsFragment"
        android:label="@string/navigation_venue_details"
        tools:layout="@layout/fragment_venue_details">
        <action
            android:id="@+id/action_venueDetailFragment_to_checkInFragment"
            app:destination="@id/checkInFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mainNavigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_venueDetailFragment_to_venueDetailFragmentCheckedIn"
            app:destination="@id/venueDetailFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mainNavigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_venueDetailsFragment_to_childrenFragment"
            app:destination="@id/childrenFragment" />
    </fragment>

    <fragment
        android:id="@+id/meetingFragment"
        android:name="de.culture4life.luca.ui.meeting.MeetingFragment"
        android:label="@string/navigation_meeting"
        tools:layout="@layout/fragment_meeting">
        <action
            android:id="@+id/action_meetingFragment_to_checkInFragment"
            app:destination="@id/checkInFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/mainNavigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_meetingFragment_to_meetingDetailFragment"
            app:destination="@id/meetingDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/meetingDetailFragment"
        android:name="de.culture4life.luca.ui.meeting.MeetingDetailFragment"
        android:label="@string/navigation_meeting_detail"
        tools:layout="@layout/fragment_meeting_detail" />

    <fragment
        android:id="@+id/meetingHistoryDetailFragment"
        android:name="de.culture4life.luca.ui.history.MeetingHistoryDetailFragment"
        android:label="@string/navigation_meeting_detail"
        tools:layout="@layout/fragment_meeting_history_detail" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="de.culture4life.luca.ui.history.HistoryFragment"
        android:label="@string/navigation_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_accessedDataFragment"
            app:destination="@id/accessedDataFragment" />
        <action
            android:id="@+id/action_historyFragment_to_accessedDataDetailFragment"
            app:destination="@id/accessedDataDetailFragment" />
        <action
            android:id="@+id/action_historyFragment_to_meetingHistoryDetailFragment"
            app:destination="@id/meetingHistoryDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/accessedDataFragment"
        android:name="de.culture4life.luca.ui.accesseddata.AccessedDataFragment"
        android:label="@string/navigation_accessed_data"
        tools:layout="@layout/fragment_accessed_data">
        <action
            android:id="@+id/action_accessedDataFragment_to_accessedDataDetailFragment"
            app:destination="@id/accessedDataDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/accessedDataDetailFragment"
        android:name="de.culture4life.luca.ui.accesseddata.AccessedDataDetailFragment"
        android:label="@string/navigation_accessed_data_details"
        tools:layout="@layout/fragment_accessed_data_detail" />

    <fragment
        android:id="@+id/childrenFragment"
        android:name="de.culture4life.luca.ui.children.ChildrenFragment"
        android:label="@string/add_children_title"
        tools:layout="@layout/fragment_adding_children" />

    <fragment
        android:id="@+id/registrationFragment"
        android:name="de.culture4life.luca.ui.registration.RegistrationFragment"
        tools:layout="@layout/fragment_registration_all" />

    <fragment
        android:id="@+id/accountFragment"
        android:name="de.culture4life.luca.ui.account.AccountFragment"
        android:label="AccountFragment"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_accountFragment_to_dailyKeyFragment"
            app:destination="@id/dailyKeyFragment" />
        <action
            android:id="@+id/action_accountFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
    </fragment>

    <fragment
        android:id="@+id/dailyKeyFragment"
        android:name="de.culture4life.luca.ui.account.dailykey.DailyKeyFragment"
        android:label="@string/account_tab_item_daily_key"
        tools:layout="@layout/fragment_daily_key" />

    <fragment
        android:id="@+id/newsFragment"
        android:name="de.culture4life.luca.ui.account.news.NewsFragment"
        android:label="@string/account_tab_item_guides"
        tools:layout="@layout/fragment_news" />

</navigation>
